refactor(core): 优化日志和错误消息的格式
- 使用字符串格式化替代字符串拼接，提高性能和可读性
- 优化部分代码结构，提高可维护性